[gd_scene load_steps=16 format=3 uid="uid://ra5ugkfqhc7"]

[ext_resource type="Script" path="res://Building Tools/Set Pieces/Sliding Door/sliding_door_command.gd" id="1_4mfjc"]
[ext_resource type="ArrayMesh" uid="uid://pwjni4rcasao" path="res://Building Tools/Filler Assets/Models/Basic Walls/HalfM_Wall_Door_Plain.obj" id="2_bclrb"]
[ext_resource type="Texture2D" uid="uid://dsej1eqt5ypvf" path="res://Building Tools/Filler Assets/Models/Paints/1 Meter White Box.png" id="2_yfh7y"]
[ext_resource type="PackedScene" uid="uid://b0gbga5dx5toq" path="res://Building Tools/Properties/Interaction/interaction.tscn" id="5_ssh5y"]
[ext_resource type="PackedScene" path="res://Building Tools/Properties/Cursor Hint/cursor_hint.tscn" id="5_xyyg8"]
[ext_resource type="AudioStream" uid="uid://co8cjueks00u6" path="res://Building Tools/Filler Assets/Sounds/Scifi Door Short.wav" id="6_j76ii"]
[ext_resource type="AudioStream" uid="uid://bu5ps1uachmo2" path="res://Building Tools/Filler Assets/Sounds/Error 2.wav" id="7_hevmy"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5pjdq"]
albedo_color = Color(0.4, 0.4, 0.4, 1)
albedo_texture = ExtResource("2_yfh7y")
uv1_offset = Vector3(0, 0.5, 0)
uv1_triplanar = true

[sub_resource type="BoxShape3D" id="BoxShape3D_i4hmi"]
size = Vector3(1.5, 2.5, 0.25)

[sub_resource type="Animation" id="Animation_xhugl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DoorBody:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_jk2r4"]
resource_name = "close"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DoorBody:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1.52, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_4fruo"]
resource_name = "default"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DoorBody:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_xjf6x"]
resource_name = "open"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DoorBody:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(1.52, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d4qse"]
_data = {
"RESET": SubResource("Animation_xhugl"),
"close": SubResource("Animation_jk2r4"),
"default": SubResource("Animation_4fruo"),
"open": SubResource("Animation_xjf6x")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_04n45"]
size = Vector3(2, 2, 4)

[node name="SlidingDoor" type="Node3D"]
script = ExtResource("1_4mfjc")

[node name="DoorBody" type="AnimatableBody3D" parent="."]

[node name="DoorMesh" type="MeshInstance3D" parent="DoorBody"]
mesh = ExtResource("2_bclrb")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_5pjdq")

[node name="DoorShape" type="CollisionShape3D" parent="DoorBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)
shape = SubResource("BoxShape3D_i4hmi")

[node name="CursorHint" parent="DoorBody" instance=ExtResource("5_xyyg8")]

[node name="Interaction" parent="DoorBody" instance=ExtResource("5_ssh5y")]

[node name="DoorAnimations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d4qse")
}

[node name="DoorAudio" type="Node3D" parent="."]

[node name="OpenSound" type="AudioStreamPlayer3D" parent="DoorAudio"]
stream = ExtResource("6_j76ii")

[node name="CloseSound" type="AudioStreamPlayer3D" parent="DoorAudio"]
stream = ExtResource("6_j76ii")

[node name="LockedSound" type="AudioStreamPlayer3D" parent="DoorAudio"]
stream = ExtResource("7_hevmy")

[node name="BrokenSound" type="AudioStreamPlayer3D" parent="DoorAudio"]
stream = ExtResource("7_hevmy")

[node name="ExitDetector" type="Area3D" parent="."]
collision_layer = 0

[node name="ExitCollider" type="CollisionShape3D" parent="ExitDetector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)
shape = SubResource("BoxShape3D_04n45")

[connection signal="interacted" from="DoorBody/Interaction" to="." method="_on_interaction_interacted"]
[connection signal="body_exited" from="ExitDetector" to="." method="_on_exit_detector_body_exited"]
